<resources>
    <string name="app_name">RecipesApp</string>
    <string name="hint_recipeName">Name</string>
    <string name="hint_recipeDescription">Description</string>
    <string name="button_addRecipe">Add Recipe</string>
    <string name="menu_addRecipe">Add</string>
    <string name="menu_cancelRecipe">Cancel</string>
    <string name="save_recipe"> Save Recipe</string>
    <string name="enter_recipe_name"> Please enter a Name for the Recipe</string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_recipe_image">Select an image for the Recipe</string>
    <string name="change_recipe_image">Change Recipe image</string>
    <string name="pick_meal">What type of meal is it?</string>
    <string name="hint_ingredient">Add Ingredients</string>
    <string name="button_addIngredient">Add Ingredient</string>
    <string name="hint_steps">Add steps</string>
    <string name="header_signup_account">Create an Account</string>
    <string name="header_login_account">Login to your Account or Create an Account</string>
    <string name="hint_name">Enter your Name</string>
    <string name="hint_email">Enter your Email</string>
    <string name="hint_password">Enter your Password</string>
    <string name="button_addStep">Add Step</string>
    <string name="btn_takePicture">Take Picture</string>
    <string name="btn_signUp">Signup</string>
    <string name="btn_login">Login</string>
    <string name="splashscreen_text">Recipes Book</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_search">Search</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="menu_delete_account">Delete Account</string>
    <string name="menu_map">Map</string>
    <string name="deleteIngredient_content_desc">Button for deleting a ingredient</string>
    <string name="deleteStep_content_desc">Button for deleting a step</string>
    <string name="edit_recipe_content_desc">Button for editing a recipe</string>
    <string name="deleteRecipe_content_desc">Button for deleting a recipe</string>
    <string name="recipeImage_content_desc">Recipe Image</string>
    <string name="splashScreenImage_content_desc">Splash Screen Image</string>
    <string name="ingredients_header">Ingredients: </string>
    <string name="steps_header">Steps: </string>
    <string name="name_header">Name</string>
    <string name="desc_header">Description</string>
    <string name="meal_header">Meal</string>
    <string name="stepsCard_header">Step: </string>
    <string name="edit_recipe_toolbar">Edit Recipe</string>
    <string name="create_recipe_toolbar">Create Recipe</string>
    <string name="view_recipe_toolbar">Recipe</string>
    <string name="recipe_list_toolbar">Recipe List</string>
    <string name="nav_recipes_group">Recipes</string>
    <string name="nav_map_group">Find Shops</string>
    <string name="nav_theme_group">Theme</string>
    <string name="nav_access_control_group">Access Control</string>
    <string name="nav_delete_group">Delete Account</string>
    <string-array name="meals">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Desert</item>
    </string-array>
    <string name="title_activity_map">Map</string>
    <string name="action_cancel_recipe">Cancel</string>
    <string name="action_add_recipe">Add a Recipe</string>
    <string name="action_view_recipes">View Recipes</string>
    <string name="group_recipes">Recipes</string>
    <string name="nav_header_title">Recipes Book</string>
    <string name="nav_header_subtitle">Create your own recipes</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="recipesNotFound">No recipes\nCreate a recipe</string>
    <string name="recipeError">Error : Couldn\'t Create Recipe...</string>
    <string name="auth_failed">Error Authenticating with Firebase</string>
    <string name="messageLoading">Recipes Loading...</string>
    <string name="change_theme">Switch Theme</string>
    <string name="recipe_author">Created By</string>
    <string name="style_json">[
  {
    "featureType": "poi",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  },
  {
    "featureType": "poi.business",
    "stylers": [
      {
        "visibility": "on"
      }
    ]
  },
  {
    "featureType": "transit",
    "stylers": [
      {
        "visibility": "off"
      }
    ]
  }
]
</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>