<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/nav_recipes_group">
        <menu>
            <item
                android:id="@+id/recipeFragment"
                android:icon="@drawable/ic_add_recipe_icon"
                android:title="@string/action_add_recipe" />
            <item
                android:id="@+id/recipeListFragment"
                android:icon="@drawable/ic_recipe_list_icon"
                android:title="@string/action_view_recipes" />
        </menu>
    </item>

    <item android:title="@string/nav_map_group">
        <menu>
            <item
                android:id="@+id/mapFragment"
                android:icon="@drawable/ic_maps_icon"
                android:title="@string/menu_map" />
        </menu>
    </item>

    <item android:title="@string/nav_theme_group">
        <menu>
            <item
                android:id="@+id/nav_toggle_style"
                android:title="@string/change_theme"
                android:icon="@drawable/ic_change_theme_icon"
                android:onClick="changeTheme"/>
        </menu>
    </item>

    <item android:title="@string/nav_access_control_group">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:title="@string/menu_logout"
                android:onClick="signOut"/>
        </menu>
    </item>

    <item android:title="@string/nav_delete_group">
        <menu>
            <item
                android:id="@+id/nav_delete_user"
                android:icon="@android:drawable/ic_delete"
                android:title="@string/nav_delete_group"
                android:onClick="deleteAccount"/>
        </menu>
    </item>
</menu>