<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView"/>

    <item
        android:id="@+id/recipeFragment"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/menu_addRecipe"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_menu"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/title_activity_map"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_logout"
        android:orderInCategory="100"
        android:title="@string/menu_logout"
        />

    <item
        android:id="@+id/item_delete_all"
        android:orderInCategory="100"
        android:title="@string/menu_delete_all"
        />

    <item
        android:id="@+id/item_delete_account"
        android:orderInCategory="100"
        android:title="@string/menu_delete_account"
        />

</menu>